# lite-socket

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/C/: lite_socket_test.c  test_sock.c
examples/matlab/: sock_test.m
include/: simple_sockets.h
msbuild/simple_sockets/: simple_sockets.sln
msbuild/simple_sockets/lib/: simple_sockets.exp
msbuild/simple_sockets/simple_socket_test/: simple_socket_test.vcxproj  simple_socket_test.vcxproj.filters
msbuild/simple_sockets/simple_sockets_dll/: simple_sockets_dll.vcxproj  simple_sockets_dll.vcxproj.filters
src/: lite_socket.c  lite_socket.h  lite_socket_ip.h  simple_sockets.c  test_sock.c
